# finance-mcp-client

./: .gitignore  Dockerfile  api_server.py  build.ps1  pyproject.toml  railway.json  render.yaml  requirements.txt
mcp_client/: __init__.py  cli.py  client.py  redis_client.py  sse_client.py  streamable_http_client.py
