[project]
name = "mcp-client"
version = "1.0.0"
description = "Minimal MCP client library for interacting with Optum MCP servers."
requires-python = ">=3.10"
authors = [
    { name = "Optum MCP", email = "dev@optum.com" }
]
dependencies = [
    "click",
    "requests",
    "loguru",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/optum/mcp-client"
"Source" = "https://github.com/optum/mcp-client"

[project.scripts]
mcp-client = "mcp_client.cli:cli"

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
